--- a/style.css
+++ b/style.css
@@ -13,11 +13,12 @@
 
   --span-color: hsl(277, 64%, 61%);
   --main-color: hsl(0, 0%, 100%);
-  --content-color: hsla(0, 0%, 100%, 0.75);
-  --stats-color: hsla(0, 0%, 100%, 0.6);
+  --content-color: hsla(0, 0%, 100%, 0.66);
+  --stats-color: hsla(0, 0%, 100%, 0.5);
 }
 
 .card-presentation {
+
   display: flex;
   align-items: center;
   justify-content: center;
@@ -37,12 +38,13 @@
 /* Box-1 */
 .box-1 {
   width: 36%;
+    border-radius: 15px 0 0 15px;
 }
 
 header {
   width: 68%;
   margin: 1.6rem auto 1rem auto;
-  font-size: 1.2em;
+  font-size: clamp(1rem, 0.4vw + 0.8rem, 2rem)
 }
 
 header span {
@@ -52,6 +54,9 @@ header span {
 .content {
   width: 68%;
   margin: 30px auto 45px auto;
+    font-size: clamp(1rem, 0.5vw + 0.5rem, 1.5rem);
+  --_content-color: var(--cont-white, var(--content-color));
+  color: var(--_content-color);
 }
 
 .content p {
@@ -93,6 +98,7 @@ header span {
 }
 
 .s-box {
+  font-weight: 700;
 }
 
 .attribution {
@@ -118,6 +124,7 @@ header span {
   background-color: var(--span-color);
   background-blend-mode: multiply;
   background-size: cover;
+      border-radius: 0 15px 15px 0;
 }
 
 .box-2 img {
@@ -125,3 +132,86 @@ header span {
   height: 100%;
 }
 /* END - Box-2 */
+
+
+
+
+/* Media / Mobile Responsive */
+@media (width >= 30em) and (width < 75em) {
+
+  header{
+    width: 90%;
+  }
+
+  .card-presentation{
+
+    flex-direction: column-reverse;
+    justify-content: center;
+    text-align: center;
+  }
+
+
+  .content{
+    width: 88%;
+    margin-bottom: 20px;
+  }
+
+  .content p {
+
+    width: 100%;
+    text-align: center;
+  }
+
+  .box-1{
+    width: 40%;
+    height: 68%;
+    border-radius: 0 0 15px 15px;
+  }
+
+  .box-2{
+    width: 40%;
+    height: 28%;
+    border-radius: 15px 15px 0 0;
+  }
+
+  .statdistics{
+    flex-direction: column;
+    align-self:  center;
+    width: 30%;
+    gap: 1.5rem;
+  }
+  
+  .attribution{
+    width: 70%;
+    margin: 0 auto 0 auto;
+  }
+
+  .attribution p{ 
+    width: 100%;
+  }
+}
+@media (width >= 75em) and (width < 90em) {
+
+
+  .content{
+
+    margin: 20px auto;
+  }
+
+.statdistics{
+    gap: 2.5rem;
+  }
+
+  .attribution {
+
+    width: 90%;
+    margin: 0 80px 0 60px;
+
+  }
+
+
+  .box-2{
+
+    width: 30%;
+  }
+}
