--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ header span {
 .content {
   width: 68%;
   margin: 30px auto 45px auto;
-    font-size: clamp(1rem, 0.5vw + 0.5rem, 1.5rem);
+    font-size: clamp(1rem, 0.5vw + 0.66rem, 1.8rem);
   --_content-color: var(--cont-white, var(--content-color));
   color: var(--_content-color);
 }
@@ -64,7 +64,7 @@ header span {
 }
 
 .statdistics {
-  margin: 0 auto 28px auto;
+  margin: 0 auto 40px auto;
   width: 70%;
 
   /* Flexbox */
@@ -190,28 +190,33 @@ header span {
     width: 100%;
   }
 }
-@media (width >= 75em) and (width < 90em) {
+@media (width >= 75em) and (width < 98em) {
 
+
+  header{
+  
+    width: 75%;
+  }
 
   .content{
 
-    margin: 20px auto;
+    margin: 30px auto;
   }
 
 .statdistics{
-    gap: 2.5rem;
+    gap: 2rem;
   }
 
   .attribution {
 
     width: 90%;
-    margin: 0 80px 0 60px;
+    margin: 0 0px 0 80px;
 
   }
 
 
   .box-2{
 
-    width: 30%;
+    width: 38%;
   }
 }
